--- a/index.html
+++ b/index.html
@@ -1,11 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- FUENTES -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- FINAL  FUENTES -->
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Estructura Del Proyecto</title>
+    <title>Estructura Del Proyedc</title>
+    <link rel="icon" href="./img/dota 2.png" />
     <link rel="stylesheet" href="./Css/Style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="page">
+      <!-- Main Content -->
+      <section class="container">
+        <nav class="navbar">
+          <div class="navbar_container">
+            <img src="./img/dota 2.png" alt="" />
+            <ul>
+              <li><a href="/">PERSON</a></li>
+              <li><a href="/">ARCANA</a></li>
+              <li><a href="/">INMORTAL</a></li>
+              <li><a href="/">HEROE</a></li>
+            </ul>
+          </div>
+        </nav>
+        <section class="main-content">
+          <p>CREA TU</p>
+          <h1>PROPIA SKIN</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+            numquam dicta, labore quisquam ratione nostrum, magni blanditiis ad
+            unde molestiae perferendis iure eos explicabo! Cupiditate fuga
+            suscipit excepturi deleniti molestias.
+          </p>
+        </section>
+        <section class="side-content">
+          <div></div>
+          <p>PUDGE</p>
+          <img src="./img/super-man.png" alt="" />
+        </section>
+        <section class="footer">
+          <div>
+            <img src="./img/batman.webp" alt="" />
+          </div>
+          <div>
+            <img src="./img/robin.png" alt="" />
+          </div>
+          <div>
+            <img src="./img/spiderman.png" alt="" />
+          </div>
+        </section>
+      </section>
+      <!-- Loader -->
+      <section class="loader">
+        <div></div>
+
+        <div></div>
+
+        <div></div>
+      </section>
+      <!-- Modal -->
+      <section></section>
+    </div>
+  </body>
 </html>
